--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: calc(10px + 3vmin);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.leaflet-container {
+  width: 80vw;
+  height: 100vh;
 }
